--- a/racing.html
+++ b/racing.html
@@ -2,7 +2,11 @@
 <html>
 <head>
      <title>Cars and Racing</title>
- <body>
+</head>
+<body>
+<h1> <p>This is a Ferrari F-12 Berlinetta</p> </h1>
+
+
 
 <img src="http://lh6.googleusercontent.com/-OtyZlBFRvck/UUzkqSdYGOI/AAAAAAAMJgc/QC47qNtLWtI/s1600/Ferrari-F12-DMC-0.jpg"/>
 </body>
