--- a/racing.html
+++ b/racing.html
@@ -9,5 +9,6 @@
 
 
 <img src="http://lh6.googleusercontent.com/-OtyZlBFRvck/UUzkqSdYGOI/AAAAAAAMJgc/QC47qNtLWtI/s1600/Ferrari-F12-DMC-0.jpg"/>
+<img src="inside.jpg">
 </body>
 </html>
